Added Error Logging

--- a/CSV Sorter/CSV Sorter/Makefile
+++ b/CSV Sorter/CSV Sorter/Makefile
@@ -1,7 +1,7 @@
 all: sorter mergesort simpleCSVsorter
 
 sorter:
-	gcc sorter.c mergesort.c simpleCSVsorter.c -o sorter.out
+	gcc sorter.c mergesort.c simpleCSVsorter.c -o sorter.out 2> errorlog
 
 mergesort: 
 	gcc -c mergesort.c -o mergesort.out
